--- a/widget/src/utils/locales/fr.json
+++ b/widget/src/utils/locales/fr.json
@@ -1,19 +1,16 @@
 {
   "rateAndReview": "+ Rate and Review",
-  "signIn": "✓ Sign In",
   "post": "Post publicly",
   "cancel": "Cancel",
   "reviewOf": "Review of",
-  "returningReviewer": "Returning reviewer? Update JWK here:",
-  "currentJwk": "Current JWK:",
   "currentPem": "Current PEM:",
   "logIn": "Log in",
   "close": "✗",
   "errorInfo": "Error occured:",
   "commentOn": "Comment on",
   "sbReview": "`s review",
+  "reviewFlagged": "Flagged as inappropriate",
   "addOptionalInfo": "Add optional useful information to publish",
-  "frmRating": "Rating",
   "frmOpinion": "Describe your experience",
   "frmNickname": "Nickname",
   "frmGivenName": "Given name",
@@ -32,7 +29,6 @@
   "frmAgreeLicense": "I agree to publishing my review, including any personally identifiable information I optionally entered, under a free and open license (<a href=\"https://creativecommons.org/licenses/by/4.0/\">CC-BY-4.0</a>), and I agree to the <a href=\"https://mangrove.reviews/terms#2-privacy-policy\">Privacy Policy</a> *",
   "frmInfoMaxFiles": "Maximum images allowed",
   "frmLblUploadImages": "Upload photos (max. {{MAX_FILES}})",
-  "addComment": "Add comment",
   "metaAge": "{{age}} years old",
   "metaGender": {
     "female": "Female",
